# hsprocessing

./: .gitignore  README.md  hsprocessing.cabal  hsprocessing.tcabal  nodelab.cabal  package.yaml  run-test.hs  run.hs  setup.sh  stack-dev.yaml  stack.yaml
app/: Main.hs
app/Language/GLSL/: JSBuilder.hs
src/: Main.hs
src/Data/Array/: Linear.hs
src/Data/Array/Linear/: Color.hs  Properties.hs
src/Data/Array/Linear/Color/: Attrs.hs  Class.hs  Modes.hs
src/Data/Array/Linear/Color/Attrs/: HSVA.hs  RGBA.hs
src/Data/Array/Repa/: Matrix.hs
src/Data/Vector/: Matrix.hs
src/Graphics/API/: Shapes.hs  Transformations.hs
src/Graphics/Display/: Object.hs
src/Graphics/Rendering/: WebGL.hs
src/Graphics/Rendering/GLSL/: SDF.hs
src/Graphics/Rendering/GLSL/SDF/: Figures.hs  Utils.hs
src/Graphics/Shading/: Flat.hs  Material.hs  Pattern.hs
src/Language/GLSL/: Builder.hs  DSL.hs
src/Math/Algebra/: Boolean.hs
src/Math/Space/: Banach.hs  Dimension.hs  Hilbert.hs  InnerProduct.hs  LocallyConvex.hs  Metric.hs  NormedVector.hs  Topological.hs  Vector.hs
src/Math/Space/Metric/: Bounded.hs  SDF.hs
src/Math/Topology/: Geometry.hs
src/Math/Topology/Geometry/: Figures.hs
test/: Main.hs
