name:                nodelab
version:             0.1.0.0
synopsis:            NodeLab
homepage:            www.nodelab.io
author:              New Byte Order
maintainer:          contact@nodelab.io
category:            drag and drop test, all reactive
build-type:          Simple
cabal-version:       >=1.22

executable nodelab
  main-is:             Main.hs
  default-extensions:   DoAndIfThenElse
                      , TemplateHaskell
                      , DeriveGeneric
                      , StandaloneDeriving
                      , FlexibleContexts
                      , MultiParamTypeClasses
                      , DefaultSignatures
                      , DeriveFunctor
                      , DeriveTraversable
                      , DeriveFoldable
                      , FlexibleInstances
                      , LambdaCase
                      , ConstraintKinds
                      , GeneralizedNewtypeDeriving
                      , DeriveDataTypeable
                      , ScopedTypeVariables
                      , NoImplicitPrelude
                      , KindSignatures
                      , DataKinds
                      , TypeFamilies

  other-modules:     Data.Array.Linear
                     Data.Array.Linear.Color
                     Data.Array.Linear.Color.Attrs
                     Data.Array.Linear.Color.Attrs.RGBA
                     Data.Array.Linear.Color.Attrs.HSVA
                     Data.Array.Linear.Color.Class
                     Data.Array.Linear.Color.Modes
                     Data.Array.Linear.Properties
                     Graphics.Display.Object
                     Graphics.Rendering.GLSL.SDF
                     Graphics.Shading.Flat
                     Graphics.Shading.Material
                     Graphics.Shading.Pattern
                     Language.GLSL.Builder
                     Language.GLSL.DSL
                     Math.Algebra.Boolean
                     Math.Space.Banach
                     Math.Space.Dimension
                     Math.Space.Hilbert
                     Math.Space.InnerProduct
                     Math.Space.LocallyConvex
                     Math.Space.Metric
                     Math.Space.Metric.Bounded
                     Math.Space.Metric.SDF
                     Math.Space.NormedVector
                     Math.Space.Topological
                     Math.Space.Vector
                     Math.Topology.Geometry
                     Math.Topology.Geometry.Figures


  build-depends:       base >= 4.8 && < 4.9
                     , ghcjs-base
                     , ghcjs-dom >=0.2 && <0.3
                     , ghcjs-prim
                     , jsaddle
                     , lens
                     , mtl
                     , transformers
                     , prologue
                     , language-glsl
                     , parsec
                     , template-haskell
                     , convert
                     , prettyclass
                     , vector
                     , data-rtuple
                     , typelevel
                     , split

  hs-source-dirs:      src
  default-language:    Haskell2010
